feat: add default roles for openchoreo
Signed-off-by: Mevan <mevan.karu@gmail.com>

--- a/install/quick-start/.values-cp.yaml
+++ b/install/quick-start/.values-cp.yaml
@@ -13,9 +13,9 @@ openchoreoApi:
           # Helm replaces lists so all mappings must be specified here.
           # The chart defaults provide the first 3; quick-start adds the CLI binding.
           mappings:
-            - name: super-admin-binding
+            - name: admin-binding
               roleRef:
-                name: super-admin
+                name: admin
               entitlement:
                 claim: groups
                 value: platformEngineer
@@ -34,9 +34,9 @@ openchoreoApi:
                 claim: sub
                 value: openchoreo-rca-agent
               effect: allow
-            - name: quickstart-cli-super-admin-binding
+            - name: quickstart-cli-admin-binding
               roleRef:
-                name: super-admin
+                name: admin
               entitlement:
                 claim: sub
                 value: openchoreo-cli-quickstart
